--- a/기본문제/.vscode/launch.json
+++ b/기본문제/.vscode/launch.json
@@ -4,7 +4,7 @@
     // 자세한 내용을 보려면 https://go.microsoft.com/fwlink/?linkid=830387을(를) 방문하세요.
     "version": "0.2.0",
     "configurations": [
-        
+
         {
             "type": "node",
             "request": "launch",
@@ -12,7 +12,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/mergingArray.js"
+            "program": "${workspaceFolder}/algo.js"
         }
     ]
 }
